@startuml
hide circle
skinparam backgroundColor #F4F8FB
skinparam entity {
  BackgroundColor #FFFFFF
  BorderColor #2F698C
  FontColor #163047
}
skinparam linetype ortho

entity "USERS" as USERS {
  * user_id : INTEGER <<PK>>
  --
  name : VARCHAR(120)
  email : VARCHAR(255) <<UNIQUE>>
  role : VARCHAR(20)
  created_at : TIMESTAMP
}

entity "COURSES" as COURSES {
  * course_id : INTEGER <<PK>>
  --
  course_code : VARCHAR(20)
  course_name : VARCHAR(160)
  term : VARCHAR(40)
}

entity "OFFICE_HOUR_SLOTS" as SLOTS {
  * slot_id : INTEGER <<PK>>
  --
  professor_id : INTEGER <<FK>>
  course_id : INTEGER <<FK>>
  start_time : TIMESTAMP
  end_time : TIMESTAMP
  mode : VARCHAR(20)
  location_or_link : VARCHAR(300)
  visibility : VARCHAR(20)
  status : VARCHAR(20)
  booked_by : INTEGER <<FK, NULL>>
  notes : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "APPOINTMENTS" as APPOINTMENTS {
  * appointment_id : INTEGER <<PK>>
  --
  slot_id : INTEGER <<FK, UNIQUE>>
  student_id : INTEGER <<FK>>
  status : VARCHAR(20)
  notes : TEXT
  created_at : TIMESTAMP
}

USERS ||--o{ SLOTS : "creates (professor_id)"
COURSES ||--o{ SLOTS : "categorizes (course_id)"
USERS ||--o{ APPOINTMENTS : "owns (student_id)"
SLOTS ||--o| APPOINTMENTS : "is booked by"
USERS o|--o{ SLOTS : "optional booked_by"

@enduml
